Fixed Link Spacing and padding

--- a/main.css
+++ b/main.css
@@ -77,10 +77,14 @@ section .row .col-md-12 {
     text-align: left;
 }
 
+section .row .text-center {
+    padding: 20px;
+}
 
 section .row .text-center img {
     width:200px;
     height: 200px;
+    padding: 20px;
     
 }
 
